Merged changes from branches/stable-2  r606 into trunk/ Log of r606: Added new class UniformPlankton.java that allows to include some plankton groups with a uniform biomass over time and space.
Also updated the configuration converter and the OldConfiguration.java.
In the new configuration file, the parameter for uniform plankton is : "plankton.biomass.total.plk#"

git-svn-id: https://subversion.renater.fr/authscm/barrier.n/svn/osmose/trunk@675 45b28200-7c74-4d1a-96bc-342942c5875a